# trading-bot

./: .env.example  .gitignore  .railwayignore  AGENTS.md  Dockerfile  README.md  alembic.ini  plan.md  requirements.txt
app/: config.py  logging.py  main.py
app/coinbase/: __init__.py  client.py  exec.py  market.py  validators.py
app/dashboard/: pnl.py  routes.py  security.py
app/dashboard/templates/: base.html  dashboard.html
app/dashboard/templates/partials/: orders.html  plans.html  pnl.html  portfolio.html  runs.html
app/db/: __init__.py  crud.py  migrate.py  models.py  session.py  url_normaliser.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 20240801_0001_initial_schema.py  20241005_0002_add_stop_price_columns.py  20250115_0003_add_post_only_to_executed_orders.py  20250115_0004_add_pnl_snapshots.py  20251005_0005_add_pnl_trades_table.py  20251020_0006_rename_run_kinds.py
app/llm/: __init__.py  client.py  prompts.py  schemas.py  summariser.py  usage.py
app/pnl_native/: Cargo.toml  __init__.py
app/pnl_native/src/: lib.rs
app/scheduler/: jobs.py  orchestration.py
scripts/: alembic
tests/: test_dashboard_pnl.py  test_dashboard_security.py  test_db_migrate.py  test_execution_service.py  test_llm_schema.py  test_logging.py  test_market.py  test_orchestration_fee_cushions.py  test_orchestration_filters.py  test_settings.py  test_validators.py
