[package]
name = "pnl_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pnl_rs"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
pyo3 = { version = "0.21", features = ["extension-module", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
